k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: users-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: users-app
    template:
       metadata:
          labels:
             app: users-app
       spec:
          containers:
          - name: users
            image: morozovav82/users:1.3
            ports:
              - name: web 
                containerPort: 8080
            livenessProbe:
              httpGet:
                port: 8080
                path: /actuator/health
              initialDelaySeconds: 10
              periodSeconds: 5
            readinessProbe:
              httpGet:
                port: 8080
                path: /actuator/health
              initialDelaySeconds: 10
              periodSeconds: 5
