k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8080
  type: NodePort
